--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./scc/styles.css">
 </head>
 
 <body>
@@ -15,7 +20,7 @@
       <a href="./index.html">WebStudio</a>
       <ul>
         <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
     </nav>
@@ -73,13 +78,13 @@
       <h2>What are we doing</h2>
       <ul>
         <li>
-          <img src="./images/products/mac.jpg" alt="Mac" width="360" height="300" />
+          <img src="./images/main_page/products/mac.jpg" alt="Mac" width="360" height="300" />
         </li>
         <li>
-          <img src="./images/products/app.jpg" alt="app" width="360" height="300" />
+          <img src="./images/main_page/products/app.jpg" alt="app" width="360" height="300" />
         </li>
         <li>
-          <img src="./images/products/photo-on-phone.jpg" alt="image on iphone" width="360" height="300" />
+          <img src="./images/main_page/products/photo-on-phone.jpg" alt="image on iphone" width="360" height="300" />
         </li>
       </ul>
     </section>
@@ -88,22 +93,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="./images/our team/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+          <img src="./images/main_page/our team/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/our team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
+          <img src="./images/main_page/our team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/our team/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+          <img src="./images/main_page/our team/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/our team/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+          <img src="./images/main_page/our team/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
