Додає стилі до сторінки Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,86 +16,92 @@
 
 <body>
     <!-- Header -->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header-mane">
+        <nav class="nav-mane">
+            <a class="logo-link link" href="./index.html"> <span class="accent">Web</span>studio</a>
+            <ul class="menu list">
+                <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+                <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+                <li><a class="mail-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="tel-header link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
 
     <!-- Main -->
     <main>
-        <h1>Our work</h1>
-        <ul>
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+        <h1 hidden>Our work</h1>
+        <ul class="list">
+            <li><button class="button secondary" type="button">All</button></li>
+            <li><button class="button secondary" type="button">Web Site</button></li>
+            <li><button class="button secondary" type="button">App</button></li>
+            <li><button class="button secondary" type="button">Design</button></li>
+            <li><button class="button secondary" type="button">Marketing</button></li>
         </ul>
-        <ul>
-            <li>
+        <h2 hidden>Examples</h2>
+        <ul class="examples-list list">
+            <li class="examples-item">
                 <img src="./images/portfolio_page/banking_app.jpg" alt="App Screen" width="360" height="300">
-                <h2>Banking App Interface Concept</h2>
-                <p>App</p>
+                <h3 class="subtitle">Banking App Interface Concept</h3>
+                <p class="description">App</p>
             </li>
-            <li>
-                <img src="./images/portfolio_page/phone_payment.jpg" alt="Phone" width="360" height="300">
-                <h2>Cashless Payment</h2>
-                <p>Marketing</p>
+            <li class="examples-item">
+                <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic
+                    Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
+                <h3 class="subtitle">Cashless Payment</h3>
+                <p class="description">Marketing</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360" height="300">
-                <h2>Meditaion App</h2>
-                <p>App</p>
+                <h3 class="subtitle">Meditaion App</h3>
+                <p class="description">App</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/taxi.jpg" alt="Car" width="360" height="300">
-                <h2>Taxi Service</h2>
-                <p>Marketing</p>
+                <h3 class="subtitle">Taxi Service</h3>
+                <p class="description">Marketing</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/illustrations.jpg" alt="Wallpaiper" width="360" height="300">
-                <h2>Screen Illustrations</h2>
-                <p>Design</p>
+                <h3 class="subtitle">Screen Illustrations</h3>
+                <p class="description">Design</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/courses.jpg" alt="Women" width="360" height="300">
-                <h2>Online Courses</h2>
-                <p>Marketing</p>
+                <h3 class="subtitle">Online Courses</h3>
+                <p class="description">Marketing</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/instagram.jpg" alt="Cards" width="360" height="300">
-                <h2>Instagram Stories Concept</h2>
-                <p>Design</p>
+                <h2 class="subtitle">Instagram Stories Concept</h2>
+                <p class="description">Design</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/food.jpg" alt="Women with food" width="360" height="300">
-                <h2>Organic Food</h2>
-                <p>Web Site</p>
+                <h2 class="subtitle">Organic Food</h2>
+                <p class="description">Web Site</p>
             </li>
-            <li>
+            <li class="examples-item">
                 <img src="./images/portfolio_page/coffee.jpg" alt="Cup of coffee" width="360" height="300">
-                <h2>Fresh Coffee</h2>
-                <p>Web Site</p>
+                <h3 class="subtitle">Fresh Coffee</h3>
+                <p class="description">Web Site</p>
             </li>
         </ul>
     </main>
 
-    <!-- Footer відобразити заголовок-->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <!-- Footer -->
+    <footer class="footer">
+        <a class="logo-link link" href="./index.html"><span class="accent">Web</span><span
+                class="accent-footer">studio</span></a>
+        <p class="description footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.
         </p>
