--- a/index.html
+++ b/index.html
@@ -15,68 +15,71 @@
 
 <body>
   <!-- Header -->
-  <header>
-    <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+  <header class="header-mane">
+    <nav class="nav-mane">
+      <a class="logo-link link" href="./index.html"> <span class="accent">Web</span>studio</a>
+      <ul class="menu list">
+        <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+        <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
+        <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
       </ul>
     </nav>
     <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list">
+        <li><a class="mail-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="tel-header link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
 
   <!-- Main -->
   <main>
+
     <!-- Hero -->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+    <section class="hero">
+      <h1 class="hero-title">Effective Solutions for Your Business</h1>
+      <button class="button primary" type="button">Order Service</button>
     </section>
-    <!-- Our advantages відобразити заголовок-->
-    <section>
-      <h2 hidden>Our Advantages</h2>
-      <ul>
+
+    <!-- Our Advantages-->
+    <section class="advantages">
+      <h2 class="advantages-title" hidden>Our Advantages</h2>
+      <ul class="advantages-list list">
         <li>
-          <h3>Strategy</h3>
-          <p>
+          <h3 class="subtitle">Strategy</h3>
+          <p class="description">
             Our goal is to identify the business problem to walk away with the perfect and
             creative solution.
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>
+          <h3 class="subtitle">Punctuality</h3>
+          <p class="description">
             Bring the key message to the brand's audience for the best price within the shortest
             possible time.
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>
+          <h3 class="subtitle">Diligence</h3>
+          <p class="description">
             Research and confirm brands that present the strongest digital growth opportunities
             and minimize risk.
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>
+          <h3 class="subtitle">Technologies</h3>
+          <p class="description">
             Design practice focused on digital experiences. We bring forth a deep passion for
             problem-solving.
           </p>
         </li>
       </ul>
     </section>
-    <!-- Our products -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
+
+    <!-- Our Products -->
+    <section class="products">
+      <h2 class="products-title">What are we doing</h2>
+      <ul class="products-list list">
         <li>
           <img src="./images/main_page/products/mac.jpg" alt="Mac" width="360" height="300" />
         </li>
@@ -88,38 +91,40 @@
         </li>
       </ul>
     </section>
+
     <!-- Our Team -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
+    <section class="team">
+      <h2 class="team-title">Our Team</h2>
+      <ul class="team-list list">
         <li>
-          <img src="./images/main_page/our team/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <img src="./images/main_page/our_team/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+          <h3 class="subtitle">Mark Guerrero</h3>
+          <p class="description">Product Designer</p>
         </li>
         <li>
-          <img src="./images/main_page/our team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <img src="./images/main_page/our_team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
+          <h3 class="subtitle">Tom Ford</h3>
+          <p class="description">Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/main_page/our team/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <img src="./images/main_page/our_team/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+          <h3 class="subtitle">Camila Garcia</h3>
+          <p class="description">Marketing</p>
         </li>
         <li>
-          <img src="./images/main_page/our team/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <img src="./images/main_page/our_team/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+          <h3 class="subtitle">Daniel Wilson</h3>
+          <p class="description">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
 
-  <!-- Footer відобразити заголовок-->
-  <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>
+  <!-- Footer -->
+  <footer class="footer">
+    <a class="logo-link link" href="./index.html"><span class="accent">Web</span><span
+        class="accent-footer">studio</span></a>
+    <p class="description footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth
       solutions.
     </p>
