Перший пункт меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,8 +99,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a class="logo-link link" href="./index.html"><span class="accent">Web</span><span
-                class="accent-footer">studio</span></a>
+        <a class="logo-link link" href="./index.html">Web<span class="accent-footer">Studio</span></a>
         <p class="description footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.
