--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header -->
   <header class="header-mane">
     <nav class="nav-mane">
-      <a class="logo-link link" href="./index.html"> <span class="accent">Web</span>studio</a>
+      <a class="logo-link link" href="./index.html">Web<span class="accent">Studio</span></a>
       <ul class="menu list">
         <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
         <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
