--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
       </ul>
     </nav>
-    <address>
-      <ul class="list">
-        <li><a class="mail-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="tel-header link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="connection">
+      <ul class="connection-list list">
+        <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
@@ -122,8 +122,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <a class="logo-link link" href="./index.html"><span class="accent">Web</span><span
-        class="accent-footer">studio</span></a>
+    <a class="logo-link link" href="./index.html">Web<span class="accent-footer">studio</span></a>
     <p class="description footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth
       solutions.
