--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="menu list">
         <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
         <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
-        <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+        <li class="menu-item"><a class="menu-link link" href="./index.html">Contacts</a></li>
       </ul>
     </nav>
     <address class="connection">
@@ -122,7 +122,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <a class="logo-link link" href="./index.html">Web<span class="accent-footer">studio</span></a>
+    <a class="logo-link link" href="./index.html">Web<span class="accent-footer">Studio</span></a>
     <p class="description footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth
       solutions.
