--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <ul class="menu list">
         <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
         <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
-        <li class="menu-item"><a class="menu-link link" href="./index.html">Contacts</a></li>
+        <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
       </ul>
     </nav>
     <address class="connection">
       <ul class="connection-list list">
         <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="header-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li><a class="header-mail link" href="mail:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
