--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <ul class="menu list">
                 <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
                 <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
-                <li class="menu-item"><a class="menu-link link" href="./index.html">Contacts</a></li>
+                <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="connection">
