--- a/portfolio.html
+++ b/portfolio.html
@@ -35,66 +35,70 @@
 
     <!-- Main -->
     <main>
-        <h1 hidden>Our work</h1>
-        <ul class="list">
-            <li><button class="button secondary" type="button">All</button></li>
-            <li><button class="button secondary" type="button">Web Site</button></li>
-            <li><button class="button secondary" type="button">App</button></li>
-            <li><button class="button secondary" type="button">Design</button></li>
-            <li><button class="button secondary" type="button">Marketing</button></li>
-        </ul>
-        <h2 hidden>Examples</h2>
-        <ul class="examples-list list">
-            <li class="examples-item">
-                <img src="./images/portfolio_page/banking_app.jpg" alt="App Screen" width="360" height="300">
-                <h3 class="subtitle">Banking App Interface Concept</h3>
-                <p class="description">App</p>
-            </li>
-            <li class="examples-item">
-                <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
-                    Tracker App · Exotic
-                    Fruit Ecommerce App ·
-                    Cloud Storage App</p>
-                <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
-                <h3 class="subtitle">Cashless Payment</h3>
-                <p class="description">Marketing</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360" height="300">
-                <h3 class="subtitle">Meditaion App</h3>
-                <p class="description">App</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/taxi.jpg" alt="Car" width="360" height="300">
-                <h3 class="subtitle">Taxi Service</h3>
-                <p class="description">Marketing</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/illustrations.jpg" alt="Wallpaiper" width="360" height="300">
-                <h3 class="subtitle">Screen Illustrations</h3>
-                <p class="description">Design</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/courses.jpg" alt="Women" width="360" height="300">
-                <h3 class="subtitle">Online Courses</h3>
-                <p class="description">Marketing</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/instagram.jpg" alt="Cards" width="360" height="300">
-                <h2 class="subtitle">Instagram Stories Concept</h2>
-                <p class="description">Design</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/food.jpg" alt="Women with food" width="360" height="300">
-                <h2 class="subtitle">Organic Food</h2>
-                <p class="description">Web Site</p>
-            </li>
-            <li class="examples-item">
-                <img src="./images/portfolio_page/coffee.jpg" alt="Cup of coffee" width="360" height="300">
-                <h3 class="subtitle">Fresh Coffee</h3>
-                <p class="description">Web Site</p>
-            </li>
-        </ul>
+        <section>
+            <h1 hidden>Our work</h1>
+            <ul class="list">
+                <li><button class="button secondary" type="button">All</button></li>
+                <li><button class="button secondary" type="button">Web Site</button></li>
+                <li><button class="button secondary" type="button">App</button></li>
+                <li><button class="button secondary" type="button">Design</button></li>
+                <li><button class="button secondary" type="button">Marketing</button></li>
+            </ul>
+            <h2 hidden>Examples</h2>
+            <ul class="examples-list list">
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/banking_app.jpg" alt="App Screen" width="360" height="300">
+                    <h3 class="subtitle">Banking App Interface Concept</h3>
+                    <p class="description">App</p>
+                </li>
+                <li class="examples-item">
+                    <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                        Tracker App · Exotic
+                        Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
+                    <h3 class="subtitle">Cashless Payment</h3>
+                    <p class="description">Marketing</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360"
+                        height="300">
+                    <h3 class="subtitle">Meditaion App</h3>
+                    <p class="description">App</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/taxi.jpg" alt="Car" width="360" height="300">
+                    <h3 class="subtitle">Taxi Service</h3>
+                    <p class="description">Marketing</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/illustrations.jpg" alt="Wallpaiper" width="360" height="300">
+                    <h3 class="subtitle">Screen Illustrations</h3>
+                    <p class="description">Design</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/courses.jpg" alt="Women" width="360" height="300">
+                    <h3 class="subtitle">Online Courses</h3>
+                    <p class="description">Marketing</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/instagram.jpg" alt="Cards" width="360" height="300">
+                    <h2 class="subtitle">Instagram Stories Concept</h2>
+                    <p class="description">Design</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/food.jpg" alt="Women with food" width="360" height="300">
+                    <h2 class="subtitle">Organic Food</h2>
+                    <p class="description">Web Site</p>
+                </li>
+                <li class="examples-item">
+                    <img src="./images/portfolio_page/coffee.jpg" alt="Cup of coffee" width="360" height="300">
+                    <h3 class="subtitle">Fresh Coffee</h3>
+                    <p class="description">Web Site</p>
+                </li>
+            </ul>
+        </section>
+
     </main>
 
     <!-- Footer -->
