--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
     <section class="team">
       <h2 class="team-title">Our Team</h2>
       <ul class="team-list list">
-        <li>
+        <li class="team-list-item">
           <img src="./images/main_page/our_team/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
           <h3 class="subtitle">Mark Guerrero</h3>
           <p class="description">Product Designer</p>
         </li>
-        <li>
+        <li class="team-list-item">
           <img src="./images/main_page/our_team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
           <h3 class="subtitle">Tom Ford</h3>
           <p class="description">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-list-item">
           <img src="./images/main_page/our_team/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" />
           <h3 class="subtitle">Camila Garcia</h3>
           <p class="description">Marketing</p>
         </li>
-        <li>
+        <li class="team-list-item">
           <img src="./images/main_page/our_team/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
           <h3 class="subtitle">Daniel Wilson</h3>
           <p class="description">UI Designer</p>
