--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,11 @@
             </ul>
             <ul class="examples-list list">
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/banking_app.jpg" alt="App Screen" width="360" height="300">
-                    <h2 class="subtitle">Banking App Interface Concept</h2>
-                    <p class="description">App</p>
+                    <a class="examples-link link" href=""><img src="./images/portfolio_page/banking_app.jpg"
+                            alt="App Screen" width="360" height="300">
+                        <h2 class="subtitle">Banking App Interface Concept</h2>
+                        <p class="description">App</p>
+                    </a>
                 </li>
                 <li class="examples-item">
                     <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
