Додає посилання в усі li Mane

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,49 +53,66 @@
                     </a>
                 </li>
                 <li class="examples-item">
-                    <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
-                        Tracker App · Exotic
-                        Fruit Ecommerce App ·
-                        Cloud Storage App</p>
-                    <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
-                    <h2 class="subtitle">Cashless Payment</h2>
-                    <p class="description">Marketing</p>
+                    <a class="exemples-linl link" href="">
+                        <p class="alt-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie
+                            Tracker App · Exotic
+                            Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
+                        <h2 class="subtitle">Cashless Payment</h2>
+                        <p class="description">Marketing</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360"
-                        height="300">
-                    <h2 class="subtitle">Meditaion App</h2>
-                    <p class="description">App</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360"
+                            height="300">
+                        <h2 class="subtitle">Meditaion App</h2>
+                        <p class="description">App</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/taxi.jpg" alt="Car" width="360" height="300">
-                    <h2 class="subtitle">Taxi Service</h2>
-                    <p class="description">Marketing</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/taxi.jpg" alt="Car" width="360" height="300">
+                        <h2 class="subtitle">Taxi Service</h2>
+                        <p class="description">Marketing</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/illustrations.jpg" alt="Wallpaiper" width="360" height="300">
-                    <h2 class="subtitle">Screen Illustrations</h2>
-                    <p class="description">Design</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/illustrations.jpg" alt="Wallpaiper" width="360" height="300">
+                        <h2 class="subtitle">Screen Illustrations</h2>
+                        <p class="description">Design</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/courses.jpg" alt="Women" width="360" height="300">
-                    <h2 class="subtitle">Online Courses</h2>
-                    <p class="description">Marketing</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/courses.jpg" alt="Women" width="360" height="300">
+                        <h2 class="subtitle">Online Courses</h2>
+                        <p class="description">Marketing</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/instagram.jpg" alt="Cards" width="360" height="300">
-                    <h2 class="subtitle">Instagram Stories Concept</h2>
-                    <p class="description">Design</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/instagram.jpg" alt="Cards" width="360" height="300">
+                        <h2 class="subtitle">Instagram Stories Concept</h2>
+                        <p class="description">Design</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/food.jpg" alt="Women with food" width="360" height="300">
-                    <h2 class="subtitle">Organic Food</h2>
-                    <p class="description">Web Site</p>
+                    <a class="exemples-linl link" href=""><img src="./images/portfolio_page/food.jpg"
+                            alt="Women with food" width="360" height="300">
+                        <h2 class="subtitle">Organic Food</h2>
+                        <p class="description">Web Site</p>
+                    </a>
                 </li>
                 <li class="examples-item">
-                    <img src="./images/portfolio_page/coffee.jpg" alt="Cup of coffee" width="360" height="300">
-                    <h2 class="subtitle">Fresh Coffee</h2>
-                    <p class="description">Web Site</p>
+                    <a class="exemples-linl link" href="">
+                        <img src="./images/portfolio_page/coffee.jpg" alt="Cup of coffee" width="360" height="300">
+                        <h2 class="subtitle">Fresh Coffee</h2>
+                        <p class="description">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
