змінює назву li на Meditation App

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                     <a class="exemples-linl link" href="">
                         <img src="./images/portfolio_page/meditaion_app.jpg" alt="laptop with phone" width="360"
                             height="300">
-                        <h2 class="subtitle">Meditaion App</h2>
+                        <h2 class="subtitle">Meditation App</h2>
                         <p class="description">App</p>
                     </a>
                 </li>
