--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./scc/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -123,7 +123,7 @@
   <!-- Footer -->
   <footer class="footer">
     <a class="logo-link link" href="./index.html">Web<span class="accent-footer">Studio</span></a>
-    <p class="description footer-text">
+    <p class="footer-text">
       Increase the flow of customers and sales for your business with digital marketing & growth
       solutions.
     </p>
