--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./scc/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
                 </li>
                 <li class="examples-item">
                     <a class="exemples-linl link" href="">
-                        <img src="./images/portfolio_page/blue_square.jpg" alt="Phone" width="360" height="300">
+                        <img src="./images/portfolio_page/phone.jpg" alt="Phone" width="360" height="300">
                         <h2 class="subtitle">Cashless Payment</h2>
                         <p class="description">Marketing</p>
                     </a>
@@ -117,7 +117,7 @@
     <!-- Footer -->
     <footer class="footer">
         <a class="logo-link link" href="./index.html">Web<span class="accent-footer">Studio</span></a>
-        <p class="description footer-text">
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.
         </p>
