Виправляє bgc списку Portfolio
1. Виправляє bgc списку Portfolio
2. Змінює колір тексту <p> footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <address class="connection">
       <ul class="connection-list list">
         <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="header-mail link" href="mail:+110001111111">+11 (000) 111-11-11</a></li>
+        <li><a class="header-tel link" href="mail:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
